169 ==> 329438 - Rename function with Date & Time does not work with NTFS.
170 ==> 376473 - Can"t set empty IPTC country code when using metadata templates.
171 ==> 380289 - Cannot write to Albums residing on NFS.
172 ==> 384465 - With Compact Flash Card Created date in thumbnails is wrong.
173 ==> 381958 - Cannot add additional collection.
174 ==> 383747 - "Rotate only by setting a flag" Changes Image Instead.
175 ==> 387977 - No icon only view of "Extras sidebar": sidebar taking up a lot of space.
176 ==> 277502 - All versions of version set always displayed in Album view [patch].
177 ==> 393283 - Caption not updating Exif.Image.ImageDescription field.
178 ==> 391060 - Crashes on undo of very large tif.
179 ==> 366305 - Add a message at startup about the lack of temporary space to perform Undo operations.
180 ==> 366391 - Rotating an image seems to forget to reset the orientation flag.
181 ==> 393654 - Not able to select gpx file.
182 ==> 367596 - Sub-folder count images but don't show them (unsupported JPEG file?).
183 ==> 379922 - Digikam won't remove tags set by Windows Explorer.
184 ==> 379081 - GPS data are in file but geolocation indicator is not shown and map view empty.
185 ==> 354819 - Specific pictures not showing up in digikam.
186 ==> 393855 - MySQL/MariaDB upgrade fails.
187 ==> 384603 - Camera Creation Date not set from EXIF data.
188 ==> 386959 - Properties view: wrong creation date [patch].
189 ==> 393970 - No mts video thumbnails.
190 ==> 393728 - Reread metadata from Video uses sidecar only.
191 ==> 393925 - UpdateSchemaFromV7ToV9 fails due to duplicate key in album_2.
192 ==> 393773 - showfoto crashes when geotagging.
193 ==> 388199 - No context menu to copy coordinates from map.
194 ==> 393399 - Windows defender freaks out in windows 10 and Edge.
195 ==> 392134 - SIGSEGV While Scanning Faces [patch].
196 ==> 394168 - OSM Search Yields No Results.
197 ==> 