@@ -73,7 +73,7 @@ public Q_SLOTS:
     void openInfos(const ImageInfo& info, const QList<ImageInfo>& allInfosToOpen, Album* currentAlbum);
     void openInfosWithDefaultApplication(const QList<ImageInfo>& allInfosToOpen);
 
-    void rename(const QUrl& imageUrl, const QString& newName);
+    void rename(const QUrl& imageUrl, const QString& newName, bool overwrite = false);
     void setAsAlbumThumbnail(Album* album, const ImageInfo& imageInfo);
 
     void createGroupByTimeFromInfoList(const ImageInfoList& imageInfoList);
