@@ -26,6 +26,7 @@
 // Qt includes
 
 #include <QDialogButtonBox>
+#include <QAbstractButton>
 #include <QApplication>
 #include <QCloseEvent>
 #include <QMessageBox>
@@ -54,6 +55,7 @@ public:
     explicit Private()
       : thumbLoadThread(0),
         utilities(0),
+        overwrite(false),
         cancel(false)
     {
     }
@@ -61,9 +63,13 @@ public:
     ThumbnailLoadThread* thumbLoadThread;
     ImageViewUtilities*  utilities;
 
+    NewNameInfo          currentInfo;
     NewNamesList         newNameList;
+    NewNamesList         failedList;
+
     QList<QUrl>          failedUrls;
-    QUrl                 currentUrl;
+
+    bool                 overwrite;
     bool                 cancel;
 
     QPixmap              thumbPixmap;
@@ -124,12 +130,13 @@ void AdvancedRenameProcessDialog::processOne()
         return;
     }
 
-    NewNameInfo info = d->newNameList.takeFirst();
-    d->currentUrl    = info.first;
+    d->currentInfo = d->newNameList.takeFirst();
 
     addedAction(d->thumbPixmap, QDir::toNativeSeparators(d->thumbPath));
     setLabel(i18n("<b>Renaming images. Please wait...</b>"));
-    d->utilities->rename(info.first, info.second);
+
+    d->utilities->rename(d->currentInfo.first,
+                         d->currentInfo.second, d->overwrite);
     getNextThumbnail();
 }
 
@@ -152,7 +159,7 @@ void AdvancedRenameProcessDialog::slotCancel()
 
 void AdvancedRenameProcessDialog::slotRenameSuccessded(const QUrl& src)
 {
-    if (d->cancel || d->currentUrl != src)
+    if (d->cancel || d->currentInfo.first != src)
     {
         return;
     }
@@ -161,26 +168,51 @@ void AdvancedRenameProcessDialog::slotRenameSuccessded(const QUrl& src)
 
     if (d->newNameList.isEmpty())
     {
-        if (!d->failedUrls.isEmpty())
+        if (!d->failedList.isEmpty())
         {
             QPointer<QMessageBox> msgBox = new QMessageBox(QMessageBox::Warning,
                                i18n("Renaming images"),
                                i18np("An error occurred while renaming %1 image.\n"
-                                    "Do you want to rename this image again?",
+                                    "Do you want to rename this image again or "
+                                    "rename this image by overwriting?",
                                     "An error occurred while renaming %1 images.\n"
-                                    "Do you want to rename these images again?",
-                                    d->failedUrls.count()),
-                               QMessageBox::Yes | QMessageBox::No, this);
+                                    "Do you want to rename these images again or "
+                                    "rename these images by overwriting?",
+                                    d->failedList.count()),
+                               QMessageBox::Yes | QMessageBox::No | QMessageBox::Cancel, this);
 
-            if (msgBox->exec() != QMessageBox::Yes)
-            {
-                d->failedUrls.clear();
-            }
+                    msgBox->button(QMessageBox::Yes)->setText(i18n("Rename Again"));
+                    msgBox->button(QMessageBox::No)->setText(i18n("Overwrite"));
 
+            int result = msgBox->exec();
             delete msgBox;
-        }
 
-        complete();
+            if (result == QMessageBox::Cancel)
+            {
+                d->failedList.clear();
+                complete();
+            }
+            else if (result == QMessageBox::No)
+            {
+                d->newNameList = d->failedList;
+                d->failedList.clear();
+                d->overwrite   = true;
+
+                setValue(0);
+                getNextThumbnail();
+                setMaximum(d->newNameList.count());
+
+                processOne();
+            }
+            else
+            {
+                complete();
+            }
+        }
+        else
+        {
+            complete();
+        }
     }
     else
     {
@@ -190,7 +222,7 @@ void AdvancedRenameProcessDialog::slotRenameSuccessded(const QUrl& src)
 
 void AdvancedRenameProcessDialog::slotRenameFailed(const QUrl& src)
 {
-    if (d->cancel || d->currentUrl != src)
+    if (d->cancel || d->currentInfo.first != src)
     {
         return;
     }
@@ -200,7 +232,7 @@ void AdvancedRenameProcessDialog::slotRenameFailed(const QUrl& src)
     setLabel(i18n("<b>Renaming images has failed...</b>"));
     qApp->processEvents();
 
-    d->failedUrls << src;
+    d->failedList << d->currentInfo;
 
     QThread::msleep(250);
 
@@ -216,12 +248,19 @@ void AdvancedRenameProcessDialog::closeEvent(QCloseEvent* e)
 void AdvancedRenameProcessDialog::abort()
 {
     d->cancel = true;
-    d->failedUrls.clear();
+    d->failedList.clear();
 }
 
 QList<QUrl> AdvancedRenameProcessDialog::failedUrls() const
 {
-    return d->failedUrls;
+    QList<QUrl> failedUrls;
+
+    foreach(const NewNameInfo& info, d->failedList)
+    {
+        failedUrls << info.first;
+    }
+
+    return failedUrls;
 }
 
 void AdvancedRenameProcessDialog::getNextThumbnail()
